[package]
name = "rate_mirrors"
version = "0.16.4"
authors = ["Nikita Almakov <nikita.almakov@gmail.com>"]
edition = "2021"
description = "Everyday-use client-side map-aware mirror ranking tool (Arch Linux; Manjaro; custom ones)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"         # An implementation of futures and streams featuring zero allocations, composability, and itera…
serde_json = "1.0"      # A JSON serialization file format
byte-unit = "4.0"     # A library for interaction with units of bytes
lazy_static = "1.4"   # A macro for declaring lazily evaluated statics in Rust.
itertools = "0.10"    # Extra iterator adaptors, iterator methods, free functions, and macros.
ambassador = "0.3"    # Deriving the delegating trait implementation via procedural macros.
thiserror = "1"
rand = "0.8"
chrono = "0.4"
nix = "0.26"
regex = "1.5"
url = { version = "2.2", features = ["serde"] }
linkify = "0.9"
select = "0.6"
clap = { version = "4.3.12", features = ["derive", "unstable-doc", "env"] }
